--- a/index.html
+++ b/index.html
@@ -1,11 +1,97 @@
 <!Doctype html>
 <html>
     <head>
-
+        <style>
+            .myDiv {
+              border: 5px outset darkblue;
+              background-color: lightblue;
+              text-align: left;
+              display: inline-block;
+              position: fixed;
+              top: 5px;
+            }
+            </style>
     </head>
     <body>
-        <p>
-            Hello there!
-        </p>
+        <div class = "myDiv">
+            <h1>Members of the cell</h1>
+            <table>
+                <tr>
+                    <th>
+                        Bauc-Bauc Qepfep
+                    </th>
+                    <th>
+                        level 1
+                    </th>
+                </tr>
+                <tr>
+                    <th>
+                        Baron Raegor Slieg
+                    </th>
+                    <th>
+                        level 1
+                    </th>
+                </tr>
+                <tr>
+                    <th>
+                        Del'jaso
+                    </th>
+                    <th>
+                        level 1
+                    </th>
+                </tr>
+                <tr>
+                    <th>
+                        Kho Drinyyr
+                    </th>
+                    <th>
+                        level 1
+                    </th>
+                </tr>
+                <tr>
+                    <th>
+                        Bauc-Bauc Qepfep
+                    </th>
+                    <th>
+                        level 1
+                    </th>
+                </tr>
+            </table>
+        </div>
+
+        <div class = "myDiv" style = "left: 8cm">
+            <h1>Funds and resources</h1>
+            20,000 credits
+            <h2>Hangar</h2>
+            <ul>
+                <li>5 x BTL-A4 Y-wing</li>
+                <li>1 x Lambda-class T-4a Shuttle</li>
+            </ul>
+            <h2>Equipment</h2>
+            <ul>
+                <li>5 x Ion Cannon Turret</li>
+            </ul>
+        </div>
+        <div class = "myDiv" style = "left: 16cm">
+            <h1>Civilian Market</h1>
+            <table>
+                <tr>
+                    <th>
+                        UT-60D U-wing transport (Used)
+                    </th>
+                    <th>
+                        19,000 credits
+                    </th>
+                </tr>
+                <tr>
+                    <th>
+                        Customized YT-1300 Light Freighter (Like new)
+                    </th>
+                    <th>
+                        20,000 credits
+                    </th>
+                </tr>
+            </table>
+        </div>
     </body>
 </html>
