--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </tr>
                 <tr>
                     <th>
-                        Bauc-Bauc Qepfep
+                        Sabdan Szor 
                     </th>
                     <th>
                         level 1
