--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
               border: 5px outset darkblue;
               background-color: lightblue;
               text-align: left;
-              display: inline-block;
+              display: block;
               position: fixed;
               top: 5px;
             }
@@ -60,8 +60,9 @@
         </div>
 
         <div class = "myDiv" style = "left: 8cm">
-            <h1>Funds and resources</h1>
+            <h1>Funds, personel, and resources</h1>
             20,000 credits
+            <h2>Personel</h2>
             <h2>Hangar</h2>
             <ul>
                 <li>5 x BTL-A4 Y-wing</li>
@@ -72,7 +73,7 @@
                 <li>5 x Ion Cannon Turret</li>
             </ul>
         </div>
-        <div class = "myDiv" style = "left: 16cm">
+        <div class = "myDiv" style = "left: 19.8cm">
             <h1>Civilian Market</h1>
             <table>
                 <tr>
