--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
               background-color: lightblue;
               text-align: left;
               display: block;
-              position: fixed;
               top: 5px;
             }
             </style>
@@ -59,7 +58,7 @@
             </table>
         </div>
 
-        <div class = "myDiv" style = "left: 8cm">
+        <div class = "myDiv">
             <h1>Funds, personel, and resources</h1>
             20,000 credits
             <h2>Personel</h2>
@@ -73,7 +72,7 @@
                 <li>5 x Ion Cannon Turret</li>
             </ul>
         </div>
-        <div class = "myDiv" style = "left: 19.8cm">
+        <div class = "myDiv">
             <h1>Civilian Market</h1>
             <table>
                 <tr>
