--- a/index.html
+++ b/index.html
@@ -60,12 +60,13 @@
 
         <div class = "myDiv">
             <h1>Funds, personel, and resources</h1>
-            20,000 credits
+            1,000 credits
             <h2>Personel</h2>
             <h2>Hangar</h2>
             <ul>
                 <li>5 x BTL-A4 Y-wing</li>
                 <li>1 x Lambda-class T-4a Shuttle</li>
+                <li>1 x UT-60D U-wing transport</li>
             </ul>
             <h2>Equipment</h2>
             <ul>
@@ -75,14 +76,6 @@
         <div class = "myDiv">
             <h1>Civilian Market</h1>
             <table>
-                <tr>
-                    <th>
-                        UT-60D U-wing transport (Used)
-                    </th>
-                    <th>
-                        19,000 credits
-                    </th>
-                </tr>
                 <tr>
                     <th>
                         Customized YT-1300 Light Freighter (Like new)
