--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
             <h1>Funds, personel, and resources</h1>
             1,000 credits
             <h2>Personel</h2>
+            <ul>
+                <li>7 x untrained</li>
+            </ul>
             <h2>Hangar</h2>
             <ul>
                 <li>5 x BTL-A4 Y-wing</li>
@@ -71,6 +74,12 @@
             <h2>Equipment</h2>
             <ul>
                 <li>5 x Ion Cannon Turret</li>
+                <li>20 x Proton Torpedoes</li>
+                <li>10 x Plasma Torpedoes</li>
+                <li>5 x Ion Torpedoes</li>
+                <li>10 x Proton Bombs</li>
+                <li>10 x Seismic Charges</li>
+                <li>5 x Proximity Mines</li>
             </ul>
         </div>
         <div class = "myDiv">
@@ -82,6 +91,64 @@
                     </th>
                     <th>
                         20,000 credits
+                    </th>
+                </tr>
+            </table>
+        </div>
+        <div class = "myDiv">
+            <h1>Black Market</h1>
+            <table>
+                <tr>
+                    <th>
+                        Proton torpedoes
+                    </th>
+                    <th>
+                        500 credits
+                    </th>
+                </tr>
+                <tr>
+                    <th>
+                        Proton bombs
+                    </th>
+                    <th>
+                        300 credits
+                    </th>
+                </tr>
+                <tr>
+                    <th>
+                        M3-A Interceptor
+                    </th>
+                    <th>
+                        10,000 credits
+                    </th>
+                </tr>
+            </table>
+        </div>
+        <div class = "myDiv">
+            <h1>Standing</h1>
+            <table>
+                <tr>
+                    <th>
+                        Public Support
+                    </th>
+                    <th>
+                        *****
+                    </th>
+                </tr>
+                <tr>
+                    <th>
+                        Imperial Wanted Level
+                    </th>
+                    <th>
+                        *****
+                    </th>
+                </tr>
+                <tr>
+                    <th>
+                        Criminal Support
+                    </th>
+                    <th>
+
                     </th>
                 </tr>
             </table>
