Added James' CSS

--- a/index.html
+++ b/index.html
@@ -1,157 +1,205 @@
-<!Doctype html>
+<!DOCTYPE HTML>
+<!-- The Header File for the website home page.  -->
+
 <html>
-    <head>
-        <style>
-            .myDiv {
-              border: 5px outset darkblue;
-              background-color: lightblue;
-              text-align: left;
-              display: block;
-              top: 5px;
-            }
-            </style>
-    </head>
-    <body>
-        <div class = "myDiv">
-            <h1>Members of the cell</h1>
-            <table>
-                <tr>
-                    <th>
-                        Bauc-Bauc Qepfep
-                    </th>
-                    <th>
-                        level 1
-                    </th>
-                </tr>
-                <tr>
-                    <th>
-                        Baron Raegor Slieg
-                    </th>
-                    <th>
-                        level 1
-                    </th>
-                </tr>
-                <tr>
-                    <th>
-                        Del'jaso
-                    </th>
-                    <th>
-                        level 1
-                    </th>
-                </tr>
-                <tr>
-                    <th>
-                        Kho Drinyyr
-                    </th>
-                    <th>
-                        level 1
-                    </th>
-                </tr>
-                <tr>
-                    <th>
-                        Sabdan Szor 
-                    </th>
-                    <th>
-                        level 1
-                    </th>
-                </tr>
-            </table>
-        </div>
+	<head>
+		<link rel="stylesheet" type="text/css" href="starwarsstyle.css">
+		<link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap" rel="stylesheet">
+	</head>
+</html>
 
-        <div class = "myDiv">
-            <h1>Funds, personel, and resources</h1>
-            1,000 credits
-            <h2>Personel</h2>
-            <ul>
-                <li>7 x untrained</li>
-            </ul>
-            <h2>Hangar</h2>
-            <ul>
-                <li>5 x BTL-A4 Y-wing</li>
-                <li>1 x Lambda-class T-4a Shuttle</li>
-                <li>1 x UT-60D U-wing transport</li>
-            </ul>
-            <h2>Equipment</h2>
-            <ul>
-                <li>5 x Ion Cannon Turret</li>
-                <li>20 x Proton Torpedoes</li>
-                <li>10 x Plasma Torpedoes</li>
-                <li>5 x Ion Torpedoes</li>
-                <li>10 x Proton Bombs</li>
-                <li>10 x Seismic Charges</li>
-                <li>5 x Proximity Mines</li>
-            </ul>
-        </div>
-        <div class = "myDiv">
-            <h1>Civilian Market</h1>
-            <table>
-                <tr>
-                    <th>
-                        Customized YT-1300 Light Freighter (Like new)
-                    </th>
-                    <th>
-                        20,000 credits
-                    </th>
-                </tr>
-            </table>
-        </div>
-        <div class = "myDiv">
-            <h1>Black Market</h1>
-            <table>
-                <tr>
-                    <th>
-                        Proton torpedoes
-                    </th>
-                    <th>
-                        500 credits
-                    </th>
-                </tr>
-                <tr>
-                    <th>
-                        Proton bombs
-                    </th>
-                    <th>
-                        300 credits
-                    </th>
-                </tr>
-                <tr>
-                    <th>
-                        M3-A Interceptor
-                    </th>
-                    <th>
-                        10,000 credits
-                    </th>
-                </tr>
-            </table>
-        </div>
-        <div class = "myDiv">
-            <h1>Standing</h1>
-            <table>
-                <tr>
-                    <th>
-                        Public Support
-                    </th>
-                    <th>
-                        *****
-                    </th>
-                </tr>
-                <tr>
-                    <th>
-                        Imperial Wanted Level
-                    </th>
-                    <th>
-                        *****
-                    </th>
-                </tr>
-                <tr>
-                    <th>
-                        Criminal Support
-                    </th>
-                    <th>
 
-                    </th>
-                </tr>
-            </table>
-        </div>
-    </body>
+<!-- Resources Section -->
+<html>
+<header class = "top">
+	<nav class = "resource">
+		<!-- Resources at the top of the page -->
+		<ul class = "topbar">
+			<li><a class = "topnav bordered" href="">Credits</a><h1>14,500</h1><img class = "topimg" src = "credits.png"></li>
+			<li><a class = "topnav bordered" href="">New Recruits</a><h1>5</h1><img class = "topimg" src = "people.png"></li>
+			<li><a class = "topnav bordered" href="">Reputation</a><h1>5</h1><img class = "topimg" src = "rebel_alliance.png"><h1>5</h1><img class = "topimg" src = "galactic_empire.png"><h1>1</h1><img class = "topimg" src = "criminal.png"></li>
+		</ul>
+	</nav>
+</header>
+
+<body>
+	<div class = "position_fix">
+	</div>
+	<div class = "columns">
+		<div class = "pilots bordered">
+			<img class = "imgtitle" src = "pilots_aurebesh.png">
+			<h1>Pilots</h1>
+			<table>
+				<tr>
+					<th>Bauc-Bauc Qepfep</th>
+					<th>INITIATIVE</th>
+					<th>2</th>
+					<th>EXP</th>
+					<th>0</th>
+				</tr>
+				<tr>
+					<th>Baron Raegor Slieg</th>
+					<th>INITIATIVE</th>
+					<th>2</th>
+					<th>EXP</th>
+					<th>0</th>
+				</tr>
+				<tr>
+					<th>Del'jaso</th>
+					<th>INITIATIVE</th>
+					<th>2</th>
+					<th>EXP</th>
+					<th>0</th>
+				</tr>
+				<tr>
+					<th>Kho Drinyyr</th>
+					<th>INITIATIVE</th>
+					<th>1</th>
+					<th>EXP</th>
+					<th>0</th>
+				</tr>
+				<tr>
+					<th>Sabdan Szor</th>
+					<th>INITIATIVE</th>
+					<th>1</th>
+					<th>EXP</th>
+					<th>0</th>
+				</tr>
+			</table>
+		</div>
+
+		<div class = "black_market bordered">
+			<img class = "imgtitle" src = "Black_market_aurebesh.png" width = "400px">
+			<h1>Black Market</h1>
+			<table>
+				<tr>
+					<th>Proton torpedoes</th>
+					<th>500<img class = "creds" src = "credits2.png"></th>
+				</tr>
+				<tr>
+					<th>Proton Bombs</th>
+					<th>300<img class = "creds" src = "credits2.png"></th>
+				</tr>
+				<tr>
+					<th>M3-A Interceptor</th>
+					<th>10,000<img class = "creds" src = "credits2.png"></th>
+				</tr>
+			</table>
+		</div>
+	</div>
+	<div class = "columns">
+		<div class = "base bordered">
+			<img class = "imgtitle" src = "Base.png">
+			<h1>Base Storage</h1>
+			<table>
+				<tr>
+					<th><img class = "xwingimg" src = "astromech.png"></th>
+					<th><table class = "inner">
+						<tr>
+							<th>None</th><th>N/A</th>
+						</tr>
+					</table>
+					</th>
+				</tr>
+				<tr>
+					<th><img class = "xwingimg" src = "Bomb.png"></th>
+					<th><table class = "inner">
+						<tr>
+							<th>Proton Bombs</th><th>10</th>
+						</tr>
+						<tr>
+							<th>Seismic Charges</th><th>10</th>
+						</tr>
+						<tr>
+							<th>Proximity Mines</th><th>5</th>
+						</tr>
+					</table>
+					</th>
+				</tr>
+				<tr>
+					<th><img class = "xwingimg" src = "Cannon.png"></th>
+					<th><table class = "inner">
+						<tr>
+							<th>None</th><th>N/A</th>
+						</tr>
+					</table>
+					</th>
+				</tr>
+				<tr>
+					<th><img class = "xwingimg" src = "Crew.png"></th>
+					<th><table class = "inner">
+						<tr>
+							<th>Perceptive Copilot</th><th>1</th>
+						</tr>
+						<tr>
+							<th>Veteran Turret Gunner</th><th>1</th>
+						</tr>
+					</table>
+					</th>
+				</tr>
+				<tr>
+					<th><img class = "xwingimg" src = "Missile.png"></th>
+					<th><table class = "inner">
+						<tr>
+							<th>None</th><th>N/A</th>
+						</tr>
+					</table>
+					</th>
+				</tr>
+				<tr>
+					<th><img class = "xwingimg" src = "Modification.png"></th>
+					<th><table class = "inner">
+						<tr>
+							<th>None</th><th>N/A</th>
+						</tr>
+					</table>
+					</th>
+				</tr>
+				<tr>
+					<th><img class = "xwingimg" src = "Torpedo.png"></th>
+					<th><table class = "inner">
+						<tr>
+							<th>Proton Torpedoes</th><th>20</th>
+						</tr>
+						<tr>
+							<th>Plasma Torpedoes</th><th>10</th>
+						</tr>
+						<tr>
+							<th>Ion Torpedoes</th><th>5</th>
+						</tr>
+					</table>
+					</th>
+				</tr>
+				<tr>
+					<th><img class = "xwingimg" src = "Turret.png"></th>
+					<th><table class = "inner">
+						<tr>
+							<th>Ion Cannon Turret</th><th>4</th>
+						</tr>
+					</table>
+					</th>
+				</tr>
+			</table>
+		</div>
+
+		<div class = "civilian_market bordered">
+			<img class = "imgtitle" src = "Civilian_market.png" width = "500px">
+			<h1>Civilian Market</h1>
+			<table>
+				<tr>
+					<th>Customized YT-1300 Light Freighter (Like new)</th>
+					<th>20,000<img class = "creds" src = "credits2.png"></th>
+				</tr>
+			</table>
+		</div>
+	</div>
+
+
+</body>
+
+
+
+
+
+
 </html>
