--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<nav class = "resource">
 		<!-- Resources at the top of the page -->
 		<ul class = "topbar">
-			<li><a class = "topnav bordered" href="">Credits</a><h1>14,500</h1><img class = "topimg" src = "credits.png"></li>
-			<li><a class = "topnav bordered" href="">New Recruits</a><h1>5</h1><img class = "topimg" src = "people.png"></li>
-			<li><a class = "topnav bordered" href="">Reputation</a><h1>5</h1><img class = "topimg" src = "rebel_alliance.png"><h1>5</h1><img class = "topimg" src = "galactic_empire.png"><h1>1</h1><img class = "topimg" src = "criminal.png"></li>
+			<li><a class = "topnav bordered" href="">Credits</a><h1>9,500</h1><img class = "topimg" src = "credits.png"></li>
+			<li><a class = "topnav bordered" href="">New Recruits</a><h1>3</h1><img class = "topimg" src = "people.png"></li>
+			<li><a class = "topnav bordered" href="">Reputation</a><h1>5</h1><img class = "topimg" src = "rebel_alliance.png"><h1>2</h1><img class = "topimg" src = "galactic_empire.png"><h1>1</h1><img class = "topimg" src = "criminal.png"></li>
 		</ul>
 	</nav>
 </header>
@@ -54,14 +54,14 @@
 				<tr>
 					<th>Kho Drinyyr</th>
 					<th>INITIATIVE</th>
-					<th>1</th>
+					<th>2</th>
 					<th>EXP</th>
 					<th>0</th>
 				</tr>
 				<tr>
 					<th>Sabdan Szor</th>
 					<th>INITIATIVE</th>
-					<th>1</th>
+					<th>2</th>
 					<th>EXP</th>
 					<th>0</th>
 				</tr>
@@ -84,6 +84,18 @@
 					<th>M3-A Interceptor</th>
 					<th>10,000<img class = "creds" src = "credits2.png"></th>
 				</tr>
+				<tr>
+					<th>Contraband Cybernetics (totally legal)</th>
+					<th>1,000<img class = "creds" src = "credits2.png"></th>
+				</tr>
+				<tr>
+					<th>Concussion Missile</th>
+					<th>400<img class = "creds" src = "credits2.png"></th>
+				</tr>
+				<tr>
+					<th>Cluster Missile</th>
+					<th>300<img class = "creds" src = "credits2.png"></th>
+				</tr>
 			</table>
 		</div>
 	</div>
@@ -96,7 +108,13 @@
 					<th><img class = "xwingimg" src = "astromech.png"></th>
 					<th><table class = "inner">
 						<tr>
-							<th>None</th><th>N/A</th>
+							<th>R4</th><th>3</th>
+						</tr>
+						<tr>
+							<th>R4-P</th><th>2</th>
+						</tr>
+						<tr>
+							<th>R2</th><th>1</th>
 						</tr>
 					</table>
 					</th>
@@ -132,7 +150,10 @@
 							<th>Perceptive Copilot</th><th>1</th>
 						</tr>
 						<tr>
-							<th>Veteran Turret Gunner</th><th>1</th>
+							<th>Veteran Turret Gunner</th><th>3</th>
+						</tr>
+						<tr>
+							<th>G O N K</th><th>2</th>
 						</tr>
 					</table>
 					</th>
@@ -159,7 +180,7 @@
 					<th><img class = "xwingimg" src = "Torpedo.png"></th>
 					<th><table class = "inner">
 						<tr>
-							<th>Proton Torpedoes</th><th>20</th>
+							<th>Proton Torpedoes</th><th>15</th>
 						</tr>
 						<tr>
 							<th>Plasma Torpedoes</th><th>10</th>
@@ -191,12 +212,12 @@
 					<th>20,000<img class = "creds" src = "credits2.png"></th>
 				</tr>
 				<tr>
-					<th>Misc astromech bundle</th>
+					<th>Veteran merc, used to be tactical officer</th>
 					<th>10,000<img class = "creds" src = "credits2.png"></th>
 				</tr>
 				<tr>
-					<th>Veteran merc, used to be tactical officer</th>
-					<th>10,000<img class = "creds" src = "credits2.png"></th>
+					<th>Fireball class racer</th>
+					<th>10,000 (OBO)<img class = "creds" src = "credits2.png"></th>
 				</tr>
 			</table>
 		</div>
