--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<nav class = "resource">
 		<!-- Resources at the top of the page -->
 		<ul class = "topbar">
-			<li><a class = "topnav bordered" href="">Credits</a><h1>9,500</h1><img class = "topimg" src = "credits.png"></li>
+			<li><a class = "topnav bordered" href="">Credits</a><h1>14,500</h1><img class = "topimg" src = "credits.png"></li>
 			<li><a class = "topnav bordered" href="">New Recruits</a><h1>3</h1><img class = "topimg" src = "people.png"></li>
-			<li><a class = "topnav bordered" href="">Reputation</a><h1>5</h1><img class = "topimg" src = "rebel_alliance.png"><h1>2</h1><img class = "topimg" src = "galactic_empire.png"><h1>1</h1><img class = "topimg" src = "criminal.png"></li>
+			<li><a class = "topnav bordered" href="">Reputation</a><h1>6</h1><img class = "topimg" src = "rebel_alliance.png"><h1>4</h1><img class = "topimg" src = "galactic_empire.png"><h1>1</h1><img class = "topimg" src = "criminal.png"></li>
 		</ul>
 	</nav>
 </header>
@@ -162,16 +162,13 @@
 					<th><img class = "xwingimg" src = "Missile.png"></th>
 					<th><table class = "inner">
 						<tr>
-							<th>None</th><th>N/A</th>
+							<th>Concussion Missile</th><th>20</th>
 						</tr>
-					</table>
-					</th>
-				</tr>
-				<tr>
-					<th><img class = "xwingimg" src = "Modification.png"></th>
-					<th><table class = "inner">
 						<tr>
-							<th>None</th><th>N/A</th>
+							<th>Cluster Missile</th><th>30</th>
+						</tr>
+						<tr>
+							<th>Proton Rockets</th><th>10</th>
 						</tr>
 					</table>
 					</th>
@@ -180,7 +177,7 @@
 					<th><img class = "xwingimg" src = "Torpedo.png"></th>
 					<th><table class = "inner">
 						<tr>
-							<th>Proton Torpedoes</th><th>15</th>
+							<th>Proton Torpedoes</th><th>14</th>
 						</tr>
 						<tr>
 							<th>Plasma Torpedoes</th><th>10</th>
@@ -196,6 +193,27 @@
 					<th><table class = "inner">
 						<tr>
 							<th>Ion Cannon Turret</th><th>4</th>
+						</tr>
+					</table>
+					</th>
+				</tr>
+				<tr>
+					<th><img class = "xwingimg" src = "Modification.png"></th>
+					<th><table class = "inner">
+						<tr>
+							<th>Y-wing</th><th>4</th>
+						</tr>
+						<tr>
+							<th>A-wing</th><th>3</th>
+						</tr>
+						<tr>
+							<th>U-wing</th><th>1</th>
+						</tr>
+						<tr>
+							<th>T4 - Lambda shuttle</th><th>1</th>
+						</tr>
+						<tr>
+							<th>GR75 transport - "Starbird"</th><th>1</th>
 						</tr>
 					</table>
 					</th>
