--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<nav class = "resource">
 		<!-- Resources at the top of the page -->
 		<ul class = "topbar">
-			<li><a class = "topnav bordered" href="">Credits</a><h1>14,500</h1><img class = "topimg" src = "credits.png"></li>
-			<li><a class = "topnav bordered" href="">New Recruits</a><h1>3</h1><img class = "topimg" src = "people.png"></li>
-			<li><a class = "topnav bordered" href="">Reputation</a><h1>6</h1><img class = "topimg" src = "rebel_alliance.png"><h1>4</h1><img class = "topimg" src = "galactic_empire.png"><h1>1</h1><img class = "topimg" src = "criminal.png"></li>
+			<li><a class = "topnav bordered" href="">Credits</a><h1>19,500</h1><img class = "topimg" src = "credits.png"></li>
+			<li><a class = "topnav bordered" href="">New Recruits</a><h1>6</h1><img class = "topimg" src = "people.png"></li>
+			<li><a class = "topnav bordered" href="">Reputation</a><h1>8</h1><img class = "topimg" src = "rebel_alliance.png"><h1>6</h1><img class = "topimg" src = "galactic_empire.png"><h1>1</h1><img class = "topimg" src = "criminal.png"></li>
 		</ul>
 	</nav>
 </header>
@@ -33,14 +33,14 @@
 				<tr>
 					<th>Bauc-Bauc Qepfep</th>
 					<th>INITIATIVE</th>
-					<th>2</th>
+					<th>3</th>
 					<th>EXP</th>
 					<th>0</th>
 				</tr>
 				<tr>
 					<th>Baron Raegor Slieg</th>
 					<th>INITIATIVE</th>
-					<th>2</th>
+					<th>3</th>
 					<th>EXP</th>
 					<th>0</th>
 				</tr>
@@ -54,7 +54,7 @@
 				<tr>
 					<th>Kho Drinyyr</th>
 					<th>INITIATIVE</th>
-					<th>2</th>
+					<th>3</th>
 					<th>EXP</th>
 					<th>0</th>
 				</tr>
@@ -77,20 +77,16 @@
 					<th>500<img class = "creds" src = "credits2.png"></th>
 				</tr>
 				<tr>
-					<th>Proton Bombs</th>
-					<th>300<img class = "creds" src = "credits2.png"></th>
-				</tr>
-				<tr>
-					<th>M3-A Interceptor</th>
-					<th>10,000<img class = "creds" src = "credits2.png"></th>
+					<th>M3-A Interceptor [Must go quick!]</th>
+					<th>8,000<img class = "creds" src = "credits2.png"></th>
 				</tr>
 				<tr>
 					<th>Contraband Cybernetics (totally legal)</th>
-					<th>1,000<img class = "creds" src = "credits2.png"></th>
+					<th>900<img class = "creds" src = "credits2.png"></th>
 				</tr>
 				<tr>
 					<th>Concussion Missile</th>
-					<th>400<img class = "creds" src = "credits2.png"></th>
+					<th>450<img class = "creds" src = "credits2.png"></th>
 				</tr>
 				<tr>
 					<th>Cluster Missile</th>
@@ -152,9 +148,6 @@
 						<tr>
 							<th>Veteran Turret Gunner</th><th>3</th>
 						</tr>
-						<tr>
-							<th>G O N K</th><th>2</th>
-						</tr>
 					</table>
 					</th>
 				</tr>
@@ -177,10 +170,10 @@
 					<th><img class = "xwingimg" src = "Torpedo.png"></th>
 					<th><table class = "inner">
 						<tr>
-							<th>Proton Torpedoes</th><th>14</th>
+							<th>Proton Torpedoes</th><th>11</th>
 						</tr>
 						<tr>
-							<th>Plasma Torpedoes</th><th>10</th>
+							<th>Plasma Torpedoes</th><th>8</th>
 						</tr>
 						<tr>
 							<th>Ion Torpedoes</th><th>5</th>
@@ -201,10 +194,13 @@
 					<th><img class = "xwingimg" src = "Modification.png"></th>
 					<th><table class = "inner">
 						<tr>
-							<th>Y-wing</th><th>4</th>
+							<th>Y-wing</th><th>3</th>
 						</tr>
 						<tr>
 							<th>A-wing</th><th>3</th>
+						</tr>
+						<tr>
+							<th>B-wing</th><th>1</th>
 						</tr>
 						<tr>
 							<th>U-wing</th><th>1</th>
@@ -226,16 +222,12 @@
 			<h1>Civilian Market</h1>
 			<table>
 				<tr>
-					<th>Customized YT-1300 Light Freighter (Like new)</th>
-					<th>20,000<img class = "creds" src = "credits2.png"></th>
-				</tr>
-				<tr>
-					<th>Veteran merc, used to be tactical officer</th>
-					<th>10,000<img class = "creds" src = "credits2.png"></th>
-				</tr>
-				<tr>
 					<th>Fireball class racer</th>
 					<th>10,000 (OBO)<img class = "creds" src = "credits2.png"></th>
+				</tr>
+				<tr>
+					<th>G-1A Starfighter</th>
+					<th>15,000<img class = "creds" src = "credits2.png"></th>
 				</tr>
 			</table>
 		</div>
