--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<nav class = "resource">
 		<!-- Resources at the top of the page -->
 		<ul class = "topbar">
-			<li><a class = "topnav bordered" href="">Credits</a><h1>19,500</h1><img class = "topimg" src = "credits.png"></li>
+			<li><a class = "topnav bordered" href="">Credits</a><h1>27,500</h1><img class = "topimg" src = "credits.png"></li>
 			<li><a class = "topnav bordered" href="">New Recruits</a><h1>6</h1><img class = "topimg" src = "people.png"></li>
 			<li><a class = "topnav bordered" href="">Reputation</a><h1>8</h1><img class = "topimg" src = "rebel_alliance.png"><h1>6</h1><img class = "topimg" src = "galactic_empire.png"><h1>1</h1><img class = "topimg" src = "criminal.png"></li>
 		</ul>
@@ -47,7 +47,7 @@
 				<tr>
 					<th>Del'jaso</th>
 					<th>INITIATIVE</th>
-					<th>2</th>
+					<th>3</th>
 					<th>EXP</th>
 					<th>0</th>
 				</tr>
@@ -77,12 +77,8 @@
 					<th>500<img class = "creds" src = "credits2.png"></th>
 				</tr>
 				<tr>
-					<th>M3-A Interceptor [Must go quick!]</th>
-					<th>8,000<img class = "creds" src = "credits2.png"></th>
-				</tr>
-				<tr>
-					<th>Contraband Cybernetics (totally legal)</th>
-					<th>900<img class = "creds" src = "credits2.png"></th>
+					<th>Belballub-22 starfighter (don't mind the suspicious stains)</th>
+					<th>14,000<img class = "creds" src = "credits2.png"></th>
 				</tr>
 				<tr>
 					<th>Concussion Missile</th>
@@ -119,7 +115,7 @@
 					<th><img class = "xwingimg" src = "Bomb.png"></th>
 					<th><table class = "inner">
 						<tr>
-							<th>Proton Bombs</th><th>10</th>
+							<th>Proton Bombs</th><th>17</th>
 						</tr>
 						<tr>
 							<th>Seismic Charges</th><th>10</th>
@@ -170,7 +166,7 @@
 					<th><img class = "xwingimg" src = "Torpedo.png"></th>
 					<th><table class = "inner">
 						<tr>
-							<th>Proton Torpedoes</th><th>11</th>
+							<th>Proton Torpedoes</th><th>14</th>
 						</tr>
 						<tr>
 							<th>Plasma Torpedoes</th><th>8</th>
@@ -209,10 +205,21 @@
 							<th>T4 - Lambda shuttle</th><th>1</th>
 						</tr>
 						<tr>
+							<th>Starviper Attack Platform</th><th>1</th>
+						</tr>
+						<tr>
 							<th>GR75 transport - "Starbird"</th><th>1</th>
 						</tr>
 					</table>
 					</th>
+				</tr>
+				<tr>
+					<th></th>
+					<th><table class = "inner">
+						<tr>
+							<th>Contraband Cybernetics</th><th>1</th>
+						</tr>
+					</table></th>
 				</tr>
 			</table>
 		</div>
