--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<nav class = "resource">
 		<!-- Resources at the top of the page -->
 		<ul class = "topbar">
-			<li><a class = "topnav bordered" href="">Credits</a><h1>27,500</h1><img class = "topimg" src = "credits.png"></li>
-			<li><a class = "topnav bordered" href="">New Recruits</a><h1>6</h1><img class = "topimg" src = "people.png"></li>
-			<li><a class = "topnav bordered" href="">Reputation</a><h1>8</h1><img class = "topimg" src = "rebel_alliance.png"><h1>6</h1><img class = "topimg" src = "galactic_empire.png"><h1>1</h1><img class = "topimg" src = "criminal.png"></li>
+			<li><a class = "topnav bordered" href="">Credits</a><h1>37,500</h1><img class = "topimg" src = "credits.png"></li>
+			<li><a class = "topnav bordered" href="">New Recruits</a><h1>10</h1><img class = "topimg" src = "people.png"></li>
+			<li><a class = "topnav bordered" href="">Reputation</a><h1>7</h1><img class = "topimg" src = "rebel_alliance.png"><h1>8</h1><img class = "topimg" src = "galactic_empire.png"><h1>2</h1><img class = "topimg" src = "criminal.png"></li>
 		</ul>
 	</nav>
 </header>
@@ -61,7 +61,7 @@
 				<tr>
 					<th>Sabdan Szor</th>
 					<th>INITIATIVE</th>
-					<th>2</th>
+					<th>3</th>
 					<th>EXP</th>
 					<th>0</th>
 				</tr>
@@ -100,7 +100,7 @@
 					<th><img class = "xwingimg" src = "astromech.png"></th>
 					<th><table class = "inner">
 						<tr>
-							<th>R4</th><th>3</th>
+							<th>R4</th><th>1</th>
 						</tr>
 						<tr>
 							<th>R4-P</th><th>2</th>
@@ -115,10 +115,10 @@
 					<th><img class = "xwingimg" src = "Bomb.png"></th>
 					<th><table class = "inner">
 						<tr>
-							<th>Proton Bombs</th><th>17</th>
+							<th>Proton Bombs</th><th>12</th>
 						</tr>
 						<tr>
-							<th>Seismic Charges</th><th>10</th>
+							<th>Seismic Charges</th><th>8</th>
 						</tr>
 						<tr>
 							<th>Proximity Mines</th><th>5</th>
@@ -166,10 +166,10 @@
 					<th><img class = "xwingimg" src = "Torpedo.png"></th>
 					<th><table class = "inner">
 						<tr>
-							<th>Proton Torpedoes</th><th>14</th>
+							<th>Proton Torpedoes</th><th>7</th>
 						</tr>
 						<tr>
-							<th>Plasma Torpedoes</th><th>8</th>
+							<th>Plasma Torpedoes</th><th>6</th>
 						</tr>
 						<tr>
 							<th>Ion Torpedoes</th><th>5</th>
@@ -210,6 +210,9 @@
 						<tr>
 							<th>GR75 transport - "Starbird"</th><th>1</th>
 						</tr>
+						<tr>
+							<th>T-65 X-wing</th><th>3</th>
+						</tr>
 					</table>
 					</th>
 				</tr>
@@ -217,7 +220,7 @@
 					<th></th>
 					<th><table class = "inner">
 						<tr>
-							<th>Contraband Cybernetics</th><th>1</th>
+							<th>Contraband Cybernetics</th><th>2</th>
 						</tr>
 					</table></th>
 				</tr>
@@ -229,12 +232,12 @@
 			<h1>Civilian Market</h1>
 			<table>
 				<tr>
-					<th>Fireball class racer</th>
-					<th>10,000 (OBO)<img class = "creds" src = "credits2.png"></th>
-				</tr>
-				<tr>
 					<th>G-1A Starfighter</th>
 					<th>15,000<img class = "creds" src = "credits2.png"></th>
+				</tr>
+				<tr>
+					<th>Military Surplus LAAT/i Gunship (cracked windscreen, squeaky right sliding door)</th>
+					<th>19,000<img class = "creds" src = "credits2.png"></th>
 				</tr>
 			</table>
 		</div>
