--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
 					<th>Cluster Missile</th>
 					<th>300<img class = "creds" src = "credits2.png"></th>
 				</tr>
+				<tr>
+					<th>M12-L Kimogila Heavy Fighter</th>
+					<th>13,000<img class = "creds" src = "credits2.png"></th>
+				</tr>
 			</table>
 		</div>
 	</div>
@@ -238,6 +242,10 @@
 				<tr>
 					<th>Military Surplus LAAT/i Gunship (cracked windscreen, squeaky right sliding door)</th>
 					<th>19,000<img class = "creds" src = "credits2.png"></th>
+				</tr>
+				<tr>
+					<th>Refurbished Astromech bundle (7 incredible mechs, No 3 will blow your mind!)</th>
+					<th>9,000<img class = "creds" src = "credits2.png"></th>
 				</tr>
 			</table>
 		</div>
