--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<nav class = "resource">
 		<!-- Resources at the top of the page -->
 		<ul class = "topbar">
-			<li><a class = "topnav bordered" href="">Credits</a><h1>34,500</h1><img class = "topimg" src = "credits.png"></li>
+			<li><a class = "topnav bordered" href="">Credits</a><h1>32,500</h1><img class = "topimg" src = "credits.png"></li>
 			<li><a class = "topnav bordered" href="">New Recruits</a><h1>10</h1><img class = "topimg" src = "people.png"></li>
-			<li><a class = "topnav bordered" href="">Reputation</a><h1>7</h1><img class = "topimg" src = "rebel_alliance.png"><h1>8</h1><img class = "topimg" src = "galactic_empire.png"><h1>5</h1><img class = "topimg" src = "criminal.png"></li>
+			<li><a class = "topnav bordered" href="">Reputation</a><h1>8</h1><img class = "topimg" src = "rebel_alliance.png"><h1>8</h1><img class = "topimg" src = "galactic_empire.png"><h1>8</h1><img class = "topimg" src = "criminal.png"></li>
 		</ul>
 	</nav>
 </header>
@@ -77,10 +77,6 @@
 					<th>500<img class = "creds" src = "credits2.png"></th>
 				</tr>
 				<tr>
-					<th>Belballub-22 starfighter (don't mind the suspicious stains)</th>
-					<th>14,000<img class = "creds" src = "credits2.png"></th>
-				</tr>
-				<tr>
 					<th>Concussion Missile</th>
 					<th>450<img class = "creds" src = "credits2.png"></th>
 				</tr>
@@ -89,8 +85,12 @@
 					<th>300<img class = "creds" src = "credits2.png"></th>
 				</tr>
 				<tr>
-					<th>M12-L Kimogila Heavy Fighter</th>
-					<th>13,000<img class = "creds" src = "credits2.png"></th>
+					<th>Advanced Sensors</th>
+					<th>11,000<img class = "creds" src = "credits2.png"></th>
+				</tr>
+				<tr>
+					<th>YT-2400</th>
+					<th>33,000<img class = "creds" src = "credits2.png"></th>
 				</tr>
 			</table>
 		</div>
@@ -155,6 +155,9 @@
 							<th>Perceptive Copilot</th><th>1</th>
 						</tr>
 						<tr>
+							<th>Khydira Drinyyr</th><th>1</th>
+						</tr>
+						<tr>
 							<th>Veteran Turret Gunner</th><th>3</th>
 						</tr>
 					</table>
@@ -167,7 +170,7 @@
 							<th>Concussion Missile</th><th>20</th>
 						</tr>
 						<tr>
-							<th>Cluster Missile</th><th>29</th>
+							<th>Cluster Missile</th><th>28</th>
 						</tr>
 						<tr>
 							<th>Proton Rockets</th><th>10</th>
@@ -182,7 +185,7 @@
 							<th>Proton Torpedoes</th><th>5</th>
 						</tr>
 						<tr>
-							<th>Plasma Torpedoes</th><th>6</th>
+							<th>Plasma Torpedoes</th><th>5</th>
 						</tr>
 						<tr>
 							<th>Ion Torpedoes</th><th>5</th>
@@ -206,7 +209,7 @@
 							<th>Y-wing</th><th>3</th>
 						</tr>
 						<tr>
-							<th>A-wing</th><th>3</th>
+							<th>A-wing</th><th>2</th>
 						</tr>
 						<tr>
 							<th>B-wing</th><th>1</th>
@@ -226,6 +229,9 @@
 						<tr>
 							<th>T-65 X-wing</th><th>3</th>
 						</tr>
+						<tr>
+							<th>Decimator Patrol Craft</th><th>1</th>
+						</tr>
 					</table>
 					</th>
 				</tr>
@@ -233,7 +239,7 @@
 					<th></th>
 					<th><table class = "inner">
 						<tr>
-							<th>Contraband Cybernetics</th><th>2</th>
+							<th>Contraband Cybernetics</th><th>3</th>
 						</tr>
 					</table></th>
 				</tr>
@@ -249,8 +255,12 @@
 					<th>15,000<img class = "creds" src = "credits2.png"></th>
 				</tr>
 				<tr>
-					<th>Military Surplus LAAT/i Gunship (cracked windscreen, squeaky right sliding door)</th>
-					<th>19,000<img class = "creds" src = "credits2.png"></th>
+					<th>Fire-Control System</th>
+					<th>6,000<img class = "creds" src = "credits2.png"></th>
+				</tr>
+				<tr>
+					<th>Collision Detector</th>
+					<th>7,000<img class = "creds" src = "credits2.png"></th>
 				</tr>
 			</table>
 		</div>
