--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@
 			<h1>Base Storage</h1>
 			<table>
 				<tr>
+					<th><img class = "xwingimg" src = ""></th>
+					<th><table class = "inner">
+						<tr>
+							<th>Collision Detector</th><th>1</th>
+						</tr>
+					</table>
+					</th>
+				</tr>
+				<tr>
 					<th><img class = "xwingimg" src = "astromech.png"></th>
 					<th><table class = "inner">
 						<tr>
@@ -232,6 +241,12 @@
 						<tr>
 							<th>Decimator Patrol Craft</th><th>1</th>
 						</tr>
+						<tr>
+							<th>Fang Fighter</th><th>2</th>
+						</tr>
+						<tr>
+							<th>Firespray Patrol Craft</th><th>1</th>
+						</tr>
 					</table>
 					</th>
 				</tr>
@@ -250,10 +265,6 @@
 			<img class = "imgtitle" src = "Civilian_market.png" width = "500px">
 			<h1>Civilian Market</h1>
 			<table>
-				<tr>
-					<th>G-1A Starfighter</th>
-					<th>15,000<img class = "creds" src = "credits2.png"></th>
-				</tr>
 				<tr>
 					<th>Fire-Control System</th>
 					<th>6,000<img class = "creds" src = "credits2.png"></th>
